// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Default story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="link link--emphasis-default link--size-lg"
    href="http://example.org/"
  >
    Link
  </a>
</div>
`;

exports[`<Link /> Emphasis story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div>
    <a
      class="link link--context-standalone link--emphasis-default link--size-md"
      href="http://example.org/"
    >
      Default Emphasis
    </a>
    <a
      class="link link--context-standalone link--emphasis-high link--size-md"
      href="http://example.org/"
    >
      High Emphasis
    </a>
    <a
      class="link link--context-standalone link--emphasis-low link--size-md"
      href="http://example.org/"
    >
      Low Emphasis
    </a>
  </div>
</div>
`;

exports[`<Link /> InheritColor story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div
    class="text-utility-critical"
  >
    <div>
      Lorem ipsum dolor sit amet,
       
      <a
        class="link link--emphasis-default link--size-lg"
        href="https://example.com/"
      >
        consectetur adipiscing elit
      </a>
      . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
       
      <a
        class="link link--emphasis-default link--size-lg"
        href="https://example.org"
      >
        Aliquam pellentesque ipsum sagittis, commodo neque at, ornare est. Maecenas a malesuada sem, vitae euismod erat. Nullam molestie nunc non dui dignissim fermentum.
      </a>
       
      Aliquam id volutpat nulla, sed auctor orci. Fusce cursus leo nisi. Fusce vehicula vitae nisl nec ultricies. Cras ut enim nec magna semper egestas. Sed sed quam id nisl bibendum convallis. Proin suscipit, odio
       
      <a
        class="link link--emphasis-default link--size-lg"
        href="https://example.edu"
      >
        vel pulvinar
      </a>
       
      euismod, risus eros ullamcorper lectus, non blandit nulla dui eget massa.
    </div>
  </div>
</div>
`;

exports[`<Link /> InverseVariant story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div
    class="w-96 p-1 text-center text-utility-inverse"
  >
    <a
      class="link link--emphasis-default link--size-lg link--variant-inverse"
      href="http://example.org/"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`<Link /> LinkInParagraphContext story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div>
    Lorem ipsum dolor sit amet,
     
    <a
      class="link link--emphasis-default link--size-lg"
      href="https://example.com/"
    >
      consectetur adipiscing elit
    </a>
    . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
     
    <a
      class="link link--emphasis-default link--size-lg"
      href="https://example.org"
    >
      Aliquam pellentesque ipsum sagittis, commodo neque at, ornare est. Maecenas a malesuada sem, vitae euismod erat. Nullam molestie nunc non dui dignissim fermentum.
    </a>
     
    Aliquam id volutpat nulla, sed auctor orci. Fusce cursus leo nisi. Fusce vehicula vitae nisl nec ultricies. Cras ut enim nec magna semper egestas. Sed sed quam id nisl bibendum convallis. Proin suscipit, odio
     
    <a
      class="link link--emphasis-default link--size-lg"
      href="https://example.edu"
    >
      vel pulvinar
    </a>
     
    euismod, risus eros ullamcorper lectus, non blandit nulla dui eget massa.
  </div>
</div>
`;

exports[`<Link /> LinkWithChevron story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="link link--context-standalone link--emphasis-default link--has-right-icon link--size-lg"
    href="http://example.org/"
  >
    Default
    <svg
      aria-hidden="true"
      class="icon link__icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.14999 21.1C6.89999 20.85 6.77499 20.5542 6.77499 20.2125C6.77499 19.8708 6.89999 19.575 7.14999 19.325L14.475 12L7.12499 4.65C6.89166 4.41667 6.77499 4.125 6.77499 3.775C6.77499 3.425 6.89999 3.125 7.14999 2.875C7.39999 2.625 7.69583 2.5 8.03749 2.5C8.37916 2.5 8.67499 2.625 8.92499 2.875L17.325 11.3C17.425 11.4 17.4958 11.5083 17.5375 11.625C17.5792 11.7417 17.6 11.8667 17.6 12C17.6 12.1333 17.5792 12.2583 17.5375 12.375C17.4958 12.4917 17.425 12.6 17.325 12.7L8.89999 21.125C8.66666 21.3583 8.37916 21.475 8.03749 21.475C7.69583 21.475 7.39999 21.35 7.14999 21.1Z"
      />
    </svg>
  </a>
</div>
`;

exports[`<Link /> LinkWithFormattedChildren story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="link link--context-standalone link--emphasis-default link--has-right-icon link--size-lg"
    href="http://example.org/"
  >
    <em>
      emphasized link
    </em>
    <svg
      aria-hidden="true"
      class="icon link__icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
      />
    </svg>
  </a>
</div>
`;

exports[`<Link /> LinkWithOpenIcon story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="link link--context-standalone link--emphasis-default link--has-right-icon link--size-lg"
    href="http://example.org/"
  >
    Default
    <svg
      aria-hidden="true"
      class="icon link__icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
      />
    </svg>
  </a>
</div>
`;

exports[`<Link /> UsingExtendedLink story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div>
    Lorem ipsum dolor sit amet,
     
    <a
      class="link link--emphasis-default link--size-lg"
      href="https://example.org/extended-link/"
      to="test"
    >
      consectetur adipiscing elit
    </a>
    . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
     
  </div>
</div>
`;

exports[`<Link /> passes class names down properly 1`] = `
<a
  class="exampleClassName link link--emphasis-default"
  data-testid="example-class-name"
  href="/"
>
  Click
</a>
`;

exports[`<Link /> passes test ids down properly 1`] = `
<a
  class="link link--emphasis-default"
  data-testid="example-test-id"
  href="/"
>
  Click
</a>
`;
